--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -16,7 +16,7 @@
     <androidx.cardview.widget.CardView
         app:cardElevation="0dp"
         android:id="@+id/signup_cv"
-        app:cardBackgroundColor="@color/colorDivider"
+        app:cardBackgroundColor="#60000000"
         app:cardCornerRadius="10dp"
         android:layout_marginHorizontal="24dp"
         android:layout_marginVertical="72dp"
@@ -37,7 +37,7 @@
                 android:layout_marginTop="16dp"
                 android:background="@android:color/transparent"
                 android:text="Dayzee Connection"
-                android:textColor="@color/colorBackground"
+                android:textColor="@android:color/white"
                 android:textSize="16sp"
                 android:id="@+id/signup_status"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -52,7 +52,7 @@
                 android:layout_marginTop="4dp"
                 android:layout_marginHorizontal="16dp"
                 tools:text="Fill in all the fields in order to create your account"
-                android:textColor="@color/colorBackground"
+                android:textColor="@android:color/white"
                 android:textSize="14sp"
                 app:layout_constraintTop_toBottomOf="@id/signup_status"
                 app:layout_constraintStart_toStartOf="parent"
@@ -67,7 +67,7 @@
                 android:textSize="14sp"
                 android:text="Email / Username"
                 android:id="@+id/email_label"
-                android:textColor="@color/colorBackground"
+                android:textColor="@android:color/white"
                 app:layout_constraintTop_toBottomOf="@id/signup_signup_info"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_width="wrap_content"
@@ -76,12 +76,12 @@
             <EditText
                 android:visibility="invisible"
                 android:fontFamily="sans-serif-light"
-                android:backgroundTint="@color/colorBackground"
+                android:backgroundTint="@android:color/white"
                 android:layout_marginHorizontal="12dp"
                 android:hint="Email"
                 android:textColorHint="#60FFFFFF"
                 android:id="@+id/signup_mail"
-                android:textColor="@color/colorBackground"
+                android:textColor="@android:color/white"
                 android:textSize="14sp"
                 app:layout_constraintTop_toBottomOf="@id/email_label"
                 app:layout_constraintStart_toStartOf="parent"
@@ -90,12 +90,12 @@
 
             <EditText
                 android:fontFamily="sans-serif-light"
-                android:backgroundTint="@color/colorBackground"
+                android:backgroundTint="@android:color/white"
                 android:layout_marginHorizontal="12dp"
                 android:hint="Email / Username"
                 android:textColorHint="#60FFFFFF"
                 android:id="@+id/signin_mail_username"
-                android:textColor="@color/colorBackground"
+                android:textColor="@android:color/white"
                 android:textSize="14sp"
                 app:layout_constraintTop_toBottomOf="@id/email_label"
                 app:layout_constraintStart_toStartOf="parent"
@@ -110,7 +110,7 @@
                 android:textSize="14sp"
                 android:text="Email / Identifiant"
                 android:id="@+id/identifiant_label"
-                android:textColor="@color/colorBackground"
+                android:textColor="@android:color/white"
                 app:layout_constraintTop_toBottomOf="@id/signup_mail"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_width="wrap_content"
@@ -119,8 +119,8 @@
             <EditText
                 android:visibility="gone"
                 android:fontFamily="sans-serif-light"
-                android:backgroundTint="@color/colorBackground"
-                android:textColor="@color/colorBackground"
+                android:backgroundTint="@android:color/white"
+                android:textColor="@android:color/white"
                 android:layout_marginHorizontal="12dp"
                 android:hint="Username"
                 android:id="@+id/signup_identifiant"
@@ -135,7 +135,7 @@
                 android:fontFamily="sans-serif-light"
                 android:id="@+id/signup_password_label"
                 android:textSize="14sp"
-                android:textColor="@color/colorBackground"
+                android:textColor="@android:color/white"
                 android:text="Password"
                 android:layout_marginTop="8dp"
                 android:layout_marginHorizontal="16dp"
@@ -147,13 +147,13 @@
             <EditText
                 android:visibility="invisible"
                 android:fontFamily="sans-serif-light"
-                android:backgroundTint="@color/colorBackground"
+                android:backgroundTint="@android:color/white"
                 android:layout_marginHorizontal="12dp"
                 android:hint="Password"
                 android:textSize="14sp"
                 android:inputType="textPassword"
                 android:textColorHint="#60FFFFFF"
-                android:textColor="@color/colorBackground"
+                android:textColor="@android:color/white"
                 android:id="@+id/signup_password"
                 app:layout_constraintTop_toBottomOf="@id/signup_password_label"
                 app:layout_constraintStart_toStartOf="parent"
@@ -163,13 +163,13 @@
 
             <EditText
                 android:fontFamily="sans-serif-light"
-                android:backgroundTint="@color/colorBackground"
+                android:backgroundTint="@android:color/white"
                 android:layout_marginHorizontal="12dp"
                 android:hint="Password"
                 android:textSize="14sp"
                 android:inputType="textPassword"
                 android:textColorHint="#60FFFFFF"
-                android:textColor="@color/colorBackground"
+                android:textColor="@android:color/white"
                 android:id="@+id/signin_password"
                 app:layout_constraintTop_toBottomOf="@id/signup_password_label"
                 app:layout_constraintStart_toStartOf="parent"
@@ -183,14 +183,14 @@
                 android:layout_marginTop="4dp"
                 android:textSize="12sp"
                 android:id="@+id/signup_forgotten_password"
-                android:textColor="@color/colorBackground"
+                android:textColor="@android:color/white"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/signup_password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
             <mehdi.sakout.fancybuttons.FancyButton
-                fancy:fb_defaultColor="@color/colorBackground"
+                fancy:fb_defaultColor="@android:color/white"
                 fancy:fb_radius="90dp"
                 fancy:fb_text="Login"
                 android:layout_marginTop="16dp"
@@ -198,7 +198,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/signup_signup_btn"
-                fancy:fb_textColor="@color/colorText"
+                fancy:fb_textColor="@android:color/black"
                 android:paddingVertical="6dp"
                 android:paddingHorizontal="48dp"
                 android:layout_marginBottom="16dp"
@@ -211,7 +211,7 @@
             <mehdi.sakout.fancybuttons.FancyButton
                 fancy:fb_defaultColor="@android:color/transparent"
                 fancy:fb_borderWidth="2dp"
-                fancy:fb_borderColor="@color/colorBackground"
+                fancy:fb_borderColor="@android:color/white"
                 fancy:fb_radius="90dp"
                 fancy:fb_text="Sign Up"
                 android:layout_marginTop="16dp"
@@ -219,7 +219,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/signup_signin_btn"
-                fancy:fb_textColor="@color/colorBackground"
+                fancy:fb_textColor="@android:color/white"
                 android:paddingVertical="6dp"
                 android:paddingHorizontal="48dp"
                 android:layout_marginBottom="16dp"
@@ -240,12 +240,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         fancy:fb_defaultColor="@android:color/transparent"
         fancy:fb_borderWidth="1dp"
-        fancy:fb_borderColor="@color/colorBackground"
+        fancy:fb_borderColor="@android:color/white"
         fancy:fb_radius="90dp"
         fancy:fb_textSize="12sp"
         fancy:fb_text="ENTER AS A GUEST"
         android:layout_marginTop="16dp"
-        fancy:fb_textColor="@color/colorBackground"
+        fancy:fb_textColor="@android:color/white"
         android:paddingVertical="10dp"
         android:layout_marginBottom="72dp"
         android:layout_marginHorizontal="36dp"
