--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -26,7 +26,7 @@
         android:shadowDy="1.0"
         android:shadowColor="@color/colorText"
         android:text="Dayzee"
-        android:textColor="@color/colorBackground"
+        android:textColor="@android:color/white"
         android:textSize="72sp"
         android:id="@+id/timenote_label"
         android:layout_width="wrap_content"
@@ -40,7 +40,7 @@
         android:fontFamily="sans-serif-light"
         android:text="Makes Your Life Easy"
         android:textSize="18sp"
-        android:textColor="@color/colorBackground"
+        android:textColor="@android:color/white"
         app:layout_constraintTop_toBottomOf="@id/timenote_label"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,18 +48,17 @@
         android:layout_height="wrap_content"/>
 
     <mehdi.sakout.fancybuttons.FancyButton
-        fancy:fb_defaultColor="@color/colorBackground"
+        fancy:fb_defaultColor="@android:color/white"
         fancy:fb_radius="90dp"
         fancy:fb_text="Login / Sign Up"
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        fancy:fb_textColor="@color/colorText"
+        fancy:fb_textColor="@android:color/black"
         android:paddingVertical="12dp"
         android:paddingHorizontal="60dp"
         android:layout_marginBottom="144dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@color/colorPrimary"
         android:textColor="@android:color/white"
         android:layout_gravity="center"
         android:id="@+id/button1"
