--- a/app/src/main/res/layout/fragment_near_by.xml
+++ b/app/src/main/res/layout/fragment_near_by.xml
@@ -127,20 +127,19 @@
             android:layout_height="wrap_content">
 
             <LinearLayout
-                android:gravity="center"
+                android:gravity="center_horizontal"
                 android:focusableInTouchMode="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:layout_gravity="center"
                     android:gravity="center"
                     android:padding="8dp"
                     android:id="@+id/nearby_nothing_to_display"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="8dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="24dp"
                     android:text="@string/nothing_to_show_nearby"
                     android:textColor="@color/colorText"
                     android:textSize="14sp"
