--- a/app/src/main/res/layout-sw380dp/item_timenote_root.xml
+++ b/app/src/main/res/layout-sw380dp/item_timenote_root.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:scaleType="centerCrop"
+        android:background="@drawable/ex"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
@@ -21,14 +22,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/gradient_timenote_top"
-        android:fontFamily="sans-serif-light"
         android:paddingHorizontal="16dp"
         android:paddingTop="16dp"
+        android:paddingBottom="16dp"
         android:shadowColor="@android:color/black"
         android:shadowDx="1"
         android:shadowDy="1"
         android:shadowRadius="1.5"
-        android:text="Marseille - Nantes"
+        tools:text="Marseille - Nantes"
         android:textAllCaps="true"
         android:textColor="@android:color/white"
         android:textSize="18sp"
@@ -49,7 +50,6 @@
         android:id="@+id/timenote_year"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-light"
         android:gravity="center"
         android:layout_marginEnd="12dp"
         android:shadowColor="@android:color/black"
@@ -70,6 +70,8 @@
         android:layout_height="48dp"
         android:layout_marginStart="160dp"
         android:layout_marginBottom="12dp"
+
+        app:layout_constraintTop_toTopOf="@id/timenote_time_gradient"
         android:background="@drawable/custom"
         android:fontFamily="sans-serif-light"
         app:layout_constraintBottom_toBottomOf="@id/timenote_vp"
@@ -79,7 +81,6 @@
         android:id="@+id/timenote_day_month"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-light"
         android:gravity="center"
         android:shadowColor="@android:color/black"
         android:shadowDx="1"
@@ -108,7 +109,6 @@
         android:id="@+id/timenote_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-light"
         android:gravity="center"
         android:layout_marginStart="12dp"
         android:shadowColor="@android:color/black"
