--- a/app/src/main/res/layout-sw360dp/item_timenote_root.xml
+++ b/app/src/main/res/layout-sw360dp/item_timenote_root.xml
@@ -250,8 +250,7 @@
                 android:layout_centerInParent="true"
                 android:id="@+id/timenote_pic_participant_one"
                 android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:src="@drawable/beach" />
+                android:layout_height="24dp" />
 
         </RelativeLayout>
 
@@ -267,8 +266,7 @@
                 android:layout_centerInParent="true"
                 android:id="@+id/timenote_pic_participant_two"
                 android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:src="@drawable/beach" />
+                android:layout_height="24dp"/>
 
         </RelativeLayout>
 
@@ -284,8 +282,7 @@
                 android:layout_centerInParent="true"
                 android:id="@+id/timenote_pic_participant_three"
                 android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:src="@drawable/beach" />
+                android:layout_height="24dp" />
 
         </RelativeLayout>
 
