--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -9,9 +9,20 @@
 
     <ImageView
         android:scaleType="centerCrop"
-        android:src="@drawable/gradient_futur"
+        android:src="@drawable/audiance"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+    <ImageView
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/dayzee"
+        android:layout_marginTop="12dp"
+        android:id="@+id/logo_dayzee"
+        android:paddingHorizontal="48dp"
+        android:layout_width="wrap_content"
+        android:layout_height="120dp"/>
 
     <androidx.cardview.widget.CardView
         app:cardElevation="0dp"
@@ -19,8 +30,8 @@
         app:cardBackgroundColor="#60000000"
         app:cardCornerRadius="10dp"
         android:layout_marginHorizontal="24dp"
-        android:layout_marginVertical="72dp"
         app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="132dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="match_parent"
