--- a/app/src/main/res/layout/item_timenote_recent.xml
+++ b/app/src/main/res/layout/item_timenote_recent.xml
@@ -16,10 +16,10 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:src="@drawable/ex"
             android:id="@+id/timenote_recent_pic_imageview"
             android:layout_width="150dp"
             android:layout_height="150dp"
+            android:src="@drawable/ic_de"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
