--- a/app/src/main/res/navigation/navigation_graph_tab_create_timenote.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_create_timenote.xml
@@ -19,19 +19,7 @@
     </fragment>
     <navigation
         android:id="@+id/navigation"
-        app:startDestination="@id/login">
-        <fragment
-            android:id="@+id/login"
-            android:name="com.timenoteco.timenote.view.loginFlow.Login"
-            android:label="fragment_login"
-            tools:layout="@layout/fragment_login">
-            <action
-                android:id="@+id/action_login_to_signup"
-                app:destination="@id/signup" />
-            <argument
-                android:name="x"
-                app:argType="boolean" />
-        </fragment>
+        app:startDestination="@id/signup">
         <fragment
             android:id="@+id/preferenceSubCategory"
             android:name="com.timenoteco.timenote.view.loginFlow.PreferenceSubCategory"
@@ -66,6 +54,7 @@
                 app:argType="boolean" />
         </fragment>
         <fragment
+            tools:layout="@layout/fragment_signup"
             android:id="@+id/signup"
             android:name="com.timenoteco.timenote.view.loginFlow.Signup"
             android:label="Signup">
