--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -18,7 +18,7 @@
         app:mt_backIconTint="@android:color/darker_gray"
         app:mt_hintColor="@android:color/darker_gray"
         app:mt_textColor="@color/colorText"
-        app:mt_placeholder="Search"
+        app:mt_placeholder="@string/search"
         android:background="@color/colorBackground"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,7 +27,7 @@
         app:mt_borderlessRippleEnabled="true"
         style="@style/MaterialSearchBarLight"
         app:mt_speechMode="false"
-        app:mt_hint="Search People, Tags..."
+        app:mt_hint="@string/search_people_tags"
         app:mt_maxSuggestionsCount="3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
