--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -47,7 +47,7 @@
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="16dp"
                 android:background="@android:color/transparent"
-                android:text="Dayzee Connection"
+                android:text="@string/dayzee_connection"
                 android:textColor="@android:color/white"
                 android:textSize="16sp"
                 android:id="@+id/signup_status"
@@ -58,28 +58,14 @@
                 android:layout_height="wrap_content"/>
 
             <TextView
-                android:id="@+id/signup_signup_info"
-                android:visibility="invisible"
-                android:layout_marginTop="4dp"
-                android:layout_marginHorizontal="16dp"
-                tools:text="Fill in all the fields in order to create your account"
-                android:textColor="@android:color/white"
-                android:textSize="14sp"
-                app:layout_constraintTop_toBottomOf="@id/signup_status"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
-            <TextView
                 android:fontFamily="sans-serif-light"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="24dp"
                 android:layout_marginHorizontal="16dp"
                 android:textSize="14sp"
-                android:text="Email / Username"
+                android:text="@string/username_email"
                 android:id="@+id/email_label"
                 android:textColor="@android:color/white"
-                app:layout_constraintTop_toBottomOf="@id/signup_signup_info"
+                app:layout_constraintTop_toBottomOf="@id/signup_status"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
@@ -89,7 +75,7 @@
                 android:fontFamily="sans-serif-light"
                 android:backgroundTint="@android:color/white"
                 android:layout_marginHorizontal="12dp"
-                android:hint="Email"
+                android:hint="@string/mail"
                 android:textColorHint="#60FFFFFF"
                 android:id="@+id/signup_mail"
                 android:textColor="@android:color/white"
@@ -103,7 +89,7 @@
                 android:fontFamily="sans-serif-light"
                 android:backgroundTint="@android:color/white"
                 android:layout_marginHorizontal="12dp"
-                android:hint="Email / Username"
+                android:hint="@string/username_email"
                 android:textColorHint="#60FFFFFF"
                 android:id="@+id/signin_mail_username"
                 android:textColor="@android:color/white"
@@ -119,7 +105,7 @@
                 android:layout_marginTop="12dp"
                 android:layout_marginHorizontal="16dp"
                 android:textSize="14sp"
-                android:text="Email / Identifiant"
+                android:text="@string/username_email"
                 android:id="@+id/identifiant_label"
                 android:textColor="@android:color/white"
                 app:layout_constraintTop_toBottomOf="@id/signup_mail"
@@ -133,7 +119,7 @@
                 android:backgroundTint="@android:color/white"
                 android:textColor="@android:color/white"
                 android:layout_marginHorizontal="12dp"
-                android:hint="Username"
+                android:hint="@string/identifiant"
                 android:id="@+id/signup_identifiant"
                 android:textColorHint="#60FFFFFF"
                 android:textSize="14sp"
@@ -147,7 +133,7 @@
                 android:id="@+id/signup_password_label"
                 android:textSize="14sp"
                 android:textColor="@android:color/white"
-                android:text="Password"
+                android:text="@string/password"
                 android:layout_marginTop="8dp"
                 android:layout_marginHorizontal="16dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -160,7 +146,7 @@
                 android:fontFamily="sans-serif-light"
                 android:backgroundTint="@android:color/white"
                 android:layout_marginHorizontal="12dp"
-                android:hint="Password"
+                android:hint="@string/password"
                 android:textSize="14sp"
                 android:inputType="textPassword"
                 android:textColorHint="#60FFFFFF"
@@ -176,7 +162,7 @@
                 android:fontFamily="sans-serif-light"
                 android:backgroundTint="@android:color/white"
                 android:layout_marginHorizontal="12dp"
-                android:hint="Password"
+                android:hint="@string/password"
                 android:textSize="14sp"
                 android:inputType="textPassword"
                 android:textColorHint="#60FFFFFF"
@@ -190,7 +176,7 @@
             <TextView
                 android:fontFamily="sans-serif-light"
                 android:layout_marginHorizontal="16dp"
-                android:text="Forgotten password ?"
+                android:text="@string/forgotten_password"
                 android:layout_marginTop="4dp"
                 android:textSize="12sp"
                 android:id="@+id/signup_forgotten_password"
@@ -203,7 +189,7 @@
             <mehdi.sakout.fancybuttons.FancyButton
                 fancy:fb_defaultColor="@android:color/white"
                 fancy:fb_radius="90dp"
-                fancy:fb_text="Login"
+                fancy:fb_text="@string/login"
                 android:layout_marginTop="16dp"
                 app:layout_constraintTop_toBottomOf="@id/signup_forgotten_password"
                 app:layout_constraintStart_toStartOf="parent"
@@ -211,7 +197,7 @@
                 app:layout_constraintEnd_toStartOf="@id/signup_signup_btn"
                 fancy:fb_textColor="@android:color/black"
                 android:paddingVertical="6dp"
-                android:paddingHorizontal="48dp"
+                android:paddingHorizontal="42dp"
                 android:layout_marginBottom="16dp"
                 android:layout_gravity="center"
                 android:id="@+id/signup_signin_btn"
@@ -224,7 +210,7 @@
                 fancy:fb_borderWidth="2dp"
                 fancy:fb_borderColor="@android:color/white"
                 fancy:fb_radius="90dp"
-                fancy:fb_text="Sign Up"
+                fancy:fb_text="@string/sign_up"
                 android:layout_marginTop="16dp"
                 app:layout_constraintTop_toBottomOf="@id/signup_forgotten_password"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -232,7 +218,7 @@
                 app:layout_constraintStart_toEndOf="@id/signup_signin_btn"
                 fancy:fb_textColor="@android:color/white"
                 android:paddingVertical="6dp"
-                android:paddingHorizontal="48dp"
+                android:paddingHorizontal="42dp"
                 android:layout_marginBottom="16dp"
                 android:layout_gravity="center"
                 android:id="@+id/signup_signup_btn"
@@ -254,7 +240,7 @@
         fancy:fb_borderColor="@android:color/white"
         fancy:fb_radius="90dp"
         fancy:fb_textSize="12sp"
-        fancy:fb_text="ENTER AS A GUEST"
+        fancy:fb_text="@string/continue_as_guest"
         android:layout_marginTop="16dp"
         fancy:fb_textColor="@android:color/white"
         android:paddingVertical="10dp"
