--- a/app/src/main/res/layout-sw380dp/item_timenote.xml
+++ b/app/src/main/res/layout-sw380dp/item_timenote.xml
@@ -8,12 +8,15 @@
     android:layout_height="wrap_content"
     android:background="@color/colorBackground">
 
+
     <ImageView
         android:id="@+id/timenote_pic_user_imageview"
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:background="@drawable/border_pic_profile"
+        android:padding="0.6dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
