--- a/app/src/main/res/layout-sw480dp/item_timenote.xml
+++ b/app/src/main/res/layout-sw480dp/item_timenote.xml
@@ -13,6 +13,8 @@
         android:layout_height="36dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:background="@drawable/border_pic_profile"
+        android:padding="0.8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
