--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -159,8 +159,7 @@
                         android:text="@string/following"
                         android:textSize="15sp"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/profile_nbr_following"
-                        tools:text="Following" />
+                        app:layout_constraintTop_toBottomOf="@id/profile_nbr_following" />
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/profile_calendar_cl"
