--- a/app/src/main/res/layout/item_timenote_recent.xml
+++ b/app/src/main/res/layout/item_timenote_recent.xml
@@ -19,7 +19,6 @@
             android:id="@+id/timenote_recent_pic_imageview"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:src="@drawable/ic_de"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -62,6 +61,8 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintStart_toEndOf="@id/timenote_recent_title"
             app:layout_constraintEnd_toEndOf="parent"
+            android:background="@drawable/border_pic_profile_recent"
+            android:padding="0.5dp"
             app:layout_constraintTop_toTopOf="@id/timenote_recent_title"
             app:layout_constraintBottom_toBottomOf="@id/timenote_recent_title"
             android:layout_width="18dp"
