--- a/app/src/main/res/layout/item_user_send.xml
+++ b/app/src/main/res/layout/item_user_send.xml
@@ -21,8 +21,9 @@
 
         <ImageView
             android:layout_centerInParent="true"
-            android:src="@drawable/beach"
             android:id="@+id/user_imageview"
+            android:background="@drawable/border_pic_profile"
+            android:padding="0.8dp"
             android:layout_width="36dp"
             android:layout_height="36dp"/>
 
