--- a/app/src/main/res/layout/fragment_create_timenote.xml
+++ b/app/src/main/res/layout/fragment_create_timenote.xml
@@ -277,7 +277,7 @@
             </com.google.android.material.card.MaterialCardView>
 
             <com.google.android.material.card.MaterialCardView
-                android:visibility="gone"
+                android:visibility="visible"
                 android:id="@+id/desc_cardview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
