--- a/app/src/main/res/layout/item_timenote_recent.xml
+++ b/app/src/main/res/layout/item_timenote_recent.xml
@@ -45,10 +45,11 @@
             app:layout_constraintStart_toStartOf="parent"
             android:paddingVertical="8dp"
             android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             android:textAllCaps="true"
             android:textColor="@android:color/white"
             android:textSize="15sp"
-            tools:text="nice  - nantes"
+            tools:text="סגולות התזונה היפנית לאריכות ואיכות חיים"
             android:maxLines="1"
             android:ellipsize="end"
             android:breakStrategy="simple"
