--- a/app/src/main/res/layout-sw380dp/item_timenote.xml
+++ b/app/src/main/res/layout-sw380dp/item_timenote.xml
@@ -4,9 +4,9 @@
     xmlns:flipTimer="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:paddingBottom="8dp"
     android:layout_height="wrap_content"
-    android:background="@color/colorBackground">
+    android:background="@color/colorBackground"
+    android:paddingBottom="8dp">
 
 
     <ImageView
@@ -22,30 +22,33 @@
 
     <TextView
         android:id="@+id/timenote_username"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:textColor="@color/colorText"
         android:textSize="15sp"
+        android:maxLines="1"
+        app:layout_constraintEnd_toStartOf="@id/timenote_options"
+        android:ellipsize="end"
         app:layout_constraintStart_toEndOf="@id/timenote_pic_user_imageview"
         app:layout_constraintTop_toTopOf="@id/timenote_pic_user_imageview"
-        tools:text="ligue 1" />
+        tools:text="Ligue 1" />
 
     <TextView
         android:id="@+id/timenote_place"
         android:layout_width="0dp"
-        android:maxLines="1"
-        android:ellipsize="end"
-        app:layout_constraintEnd_toStartOf="@id/timenote_options"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:ellipsize="end"
         android:fontFamily="sans-serif-light"
+        android:maxLines="1"
         android:textColor="@color/colorText"
         android:textSize="13sp"
+        app:layout_constraintEnd_toStartOf="@id/timenote_options"
+        app:layout_constraintBottom_toBottomOf="@id/timenote_pic_user_imageview"
         app:layout_constraintStart_toEndOf="@id/timenote_pic_user_imageview"
         app:layout_constraintTop_toBottomOf="@id/timenote_username"
-        app:layout_constraintBottom_toBottomOf="@id/timenote_pic_user_imageview"
-        tools:text="Orange Vélodrome" />
+        tools:text="ligue 1" />
 
     <ImageView
         android:id="@+id/timenote_options"
@@ -58,11 +61,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <include
-        android:layout_marginTop="8dp"
+        android:id="@+id/timenote_root"
+        layout="@layout/item_timenote_root"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/timenote_pic_user_imageview"
-        android:id="@+id/timenote_root"
-        layout="@layout/item_timenote_root"/>
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/timenote_pic_user_imageview" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
