--- a/app/src/main/res/layout/adapter_pref_sub_category_card.xml
+++ b/app/src/main/res/layout/adapter_pref_sub_category_card.xml
@@ -12,6 +12,7 @@
     tools:targetApi="lollipop">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@drawable/sha"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -19,21 +20,24 @@
             android:id="@+id/pref_sub_category_title_category"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="17dp"
-            android:textColor="@color/colorText"
-            android:textSize="18sp"
-            android:paddingBottom="8dp"
-            android:paddingStart="8dp"
-            android:paddingEnd="0dp"
+            android:padding="24dp"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"
+            android:textAllCaps="true"
+            android:shadowColor="@android:color/black"
+            android:scaleX="1"
+            android:scaleY="1"
+            android:shadowRadius="1.5"
             tools:text="Sports"
+            app:layout_constraintBottom_toTopOf="@id/card_line"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
         <TextView
             android:id="@+id/card_line"
             app:layout_constraintTop_toBottomOf="@id/pref_sub_category_title_category"
-            style="@style/AppTheme.Divider.Toolbar"/>
+            style="@style/AppTheme.Divider.Toolbar"
+            tools:ignore="MissingConstraints" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:background="@color/colorBackground"
