--- a/app/src/main/res/layout/adapter_search_explore.xml
+++ b/app/src/main/res/layout/adapter_search_explore.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
-    app:cardBackgroundColor="@color/colorBackground"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_marginTop="8dp"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
 
 
 <androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_marginTop="8dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@drawable/sha"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -17,16 +14,20 @@
         android:id="@+id/search_explore_category"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:paddingHorizontal="16dp"
-        android:paddingVertical="12dp"
-        android:textSize="17sp"
-        android:textColor="@color/colorText"
+        android:padding="24dp"
+        android:textSize="20sp"
+        android:shadowRadius="1.5"
+        android:scaleY="1"
+        android:scaleX="1"
+        android:shadowColor="@android:color/black"
+        android:textColor="@android:color/white"
         tools:text="CULTURE"
         android:textAllCaps="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <ImageView
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/search_explore_category"
         android:id="@+id/search_explore_see_subcategory"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,6 +40,8 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:paddingTop="8dp"
+        android:background="@color/colorBackground"
         android:id="@+id/search_explore_rv"
         tools:listitem="@layout/item_search_explore"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,4 +51,3 @@
         android:layout_height="wrap_content"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-</com.google.android.material.card.MaterialCardView>
