--- a/app/src/main/res/layout/adapter_suggestion_card.xml
+++ b/app/src/main/res/layout/adapter_suggestion_card.xml
@@ -15,22 +15,24 @@
     tools:targetApi="lollipop">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@drawable/sha"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <TextView
-            android:fontFamily="sans-serif-light"
-            android:id="@+id/suggestion_title_category"
+            android:id="@+id/pref_sub_category_title_category"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="24dp"
-            android:textColor="@color/colorText"
-            android:textSize="24sp"
-            android:paddingBottom="8dp"
-            android:paddingStart="8dp"
-            android:paddingEnd="0dp"
+            android:padding="24dp"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"
+            android:textAllCaps="true"
+            android:shadowColor="@android:color/black"
+            android:scaleX="1"
+            android:scaleY="1"
+            android:shadowRadius="1.5"
             tools:text="Sports"
+            app:layout_constraintBottom_toTopOf="@id/suggestion_rv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
@@ -44,7 +46,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/suggestion_title_category"
+            app:layout_constraintTop_toBottomOf="@id/pref_sub_category_title_category"
             tools:listitem="@layout/item_suggestion" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
